force-app/main/default/objects/Job_Ticket__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending - New Job</fullName>
                <default>true</default>
                <label>Pending - New Job</label>
            </value>
            <value>
                <fullName>To Design</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>On Proof</fullName>
            </value>
            <value>
                <fullName>Completed - Pending Instructions</fullName>
            </value>
            <value>
                <fullName>Completed - At Press</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>