force-app/main/default/objects/Job_Ticket__c/fields/Status_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Status_Last_Updated__c</fullName>
    <description
  >Date &amp; time the Status field was last updated, filled in by a flow.</description>
    <label>Status Last Updated</label>
    <type>DateTime</type>
</CustomField>