force-app/main/default/objects/Job_Ticket__c/fields/Stitched__c.field-meta.xml
<CustomField>
    <fullName>Stitched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stitched</label>
    <type>Checkbox</type>
</CustomField>