force-app/main/default/objects/Job_Ticket__c/fields/Stock_Color__c.field-meta.xml
<CustomField>
    <fullName>Stock_Color__c</fullName>
    <label>Stock Color</label>
    <length>100</length>
    <type>Text</type>
</CustomField>