force-app/main/default/objects/Job_Ticket__c/fields/To_Press__c.field-meta.xml
<CustomField>
    <fullName>To_Press__c</fullName>
    <label>To Press</label>
    <type>Date</type>
</CustomField>