force-app/main/default/objects/Job_Ticket__c/fields/Trimmed__c.field-meta.xml
<CustomField>
    <fullName>Trimmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trimmed</label>
    <type>Checkbox</type>
</CustomField>