force-app/main/default/objects/Job_Ticket__c/fields/Type_of_Fold__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Fold__c</fullName>
    <label>Type of Fold</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Half fold</fullName>
            </value>
            <value>
                <fullName>Quarter fold</fullName>
            </value>
            <value>
                <fullName>Tri-fold</fullName>
            </value>
            <value>
                <fullName>Letter fold</fullName>
            </value>
            <value>
                <fullName>Z fold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>