force-app/main/default/objects/Job_Ticket__c/fields/Update_Existing_File__c.field-meta.xml
<CustomField>
    <fullName>Update_Existing_File__c</fullName>
    <label>Update Existing File (T-Drive)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>