force-app/main/default/objects/Job_Ticket__c/fields/Update_Existing_File_URL__c.field-meta.xml
<CustomField>
    <fullName>Update_Existing_File_URL__c</fullName>
    <label>Update Existing File (URL)</label>
    <type>Url</type>
</CustomField>