force-app/main/default/objects/Job_Ticket__c/fields/Varnish__c.field-meta.xml
<CustomField>
    <fullName>Varnish__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Varnish</label>
    <type>Checkbox</type>
</CustomField>