force-app/main/default/objects/Job_Ticket__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <label>Vendor</label>
    <type>TextArea</type>
</CustomField>