force-app/main/default/objects/Job_Ticket__c/fields/Wafer_Seal__c.field-meta.xml
<CustomField>
    <fullName>Wafer_Seal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wafer Seal</label>
    <type>Checkbox</type>
</CustomField>