force-app/main/default/objects/Job_Ticket__c/fields/X11x17__c.field-meta.xml
<CustomField>
    <fullName>X11x17__c</fullName>
    <label>(11x17)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>