force-app/main/default/objects/Job_Ticket__c/fields/X121x68__c.field-meta.xml
<CustomField>
    <fullName>X121x68__c</fullName>
    <label>(121x68)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>