force-app/main/default/objects/Job_Ticket__c/fields/X12x15__c.field-meta.xml
<CustomField>
    <fullName>X12x15__c</fullName>
    <label>(12x15)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>