force-app/main/default/objects/Job_Ticket__c/fields/X8_5x11__c.field-meta.xml
<CustomField>
    <fullName>X8_5x11__c</fullName>
    <label>(8.5x11)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>