force-app/main/default/objects/Job_Ticket__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Designer__c</columns>
    <columns>Job_Name__c</columns>
    <columns>Finished_Job_Due__c</columns>
    <columns>Date_Completed__c</columns>
    <columns>Status__c</columns>
    <columns>Originator__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>