force-app/main/default/objects/Job_Ticket__c/listViews/All_Kelli_2025.listView-meta.xml
<ListView>
    <fullName>All_Kelli_2025</fullName>
    <columns>NAME</columns>
    <columns>Designer__c</columns>
    <columns>Job_Name__c</columns>
    <columns>Requested_by__c</columns>
    <columns>Highlight_Color__c</columns>
    <columns>Finished_Job_Due__c</columns>
    <columns>Date_Completed__c</columns>
    <columns>Status__c</columns>
    <columns>Job_Order__c</columns>
    <columns>Originator__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>kwidm</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Pending - New Job</value>
    </filters>
    <filters>
        <field>Finished_Job_Due__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2025</value>
    </filters>
    <filters>
        <field>Finished_Job_Due__c</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2025</value>
    </filters>
    <label>All Kelli - 2025</label>
</ListView>