force-app/main/default/objects/Job_Ticket__c/listViews/All_Miranda.listView-meta.xml
<ListView>
    <fullName>All_Miranda</fullName>
    <columns>NAME</columns>
    <columns>Designer__c</columns>
    <columns>Job_Name__c</columns>
    <columns>Finished_Job_Due__c</columns>
    <columns>Date_Completed__c</columns>
    <columns>Status__c</columns>
    <columns>Originator__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Designer__c</field>
        <operation>equals</operation>
        <value>Miranda Bohna</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Pending - New Job</value>
    </filters>
    <label>All Miranda</label>
</ListView>