force-app/main/default/objects/Job_Ticket__c/listViews/All_SIGNS_Stephan_2022.listView-meta.xml
<ListView>
    <fullName>All_SIGNS_Stephan_2022</fullName>
    <columns>NAME</columns>
    <columns>Designer__c</columns>
    <columns>Job_Name__c</columns>
    <columns>Finished_Job_Due__c</columns>
    <columns>Date_Completed__c</columns>
    <columns>Status__c</columns>
    <columns>Job_Order__c</columns>
    <columns>Originator__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Project_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>kwidm</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Pending - New Job</value>
    </filters>
    <filters>
        <field>Date_Completed__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2022</value>
    </filters>
    <filters>
        <field>Job_Name__c</field>
        <operation>contains</operation>
        <value>Sign</value>
    </filters>
    <filters>
        <field>Date_Completed__c</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2022</value>
    </filters>
    <label>All SIGNS - Stephan 2022</label>
</ListView>