force-app/main/default/objects/Job_Ticket__c/listViews/All_Stephan.listView-meta.xml
<ListView>
    <fullName>All_Stephan</fullName>
    <columns>NAME</columns>
    <columns>Date_to_Design__c</columns>
    <columns>Designer__c</columns>
    <columns>Job_Name__c</columns>
    <columns>Finished_Job_Due__c</columns>
    <columns>Date_Completed__c</columns>
    <columns>Status__c</columns>
    <columns>Job_Order__c</columns>
    <columns>Originator__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Project_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>swidm</value>
    </filters>
    <filters>
        <field>Date_to_Design__c</field>
        <operation>greaterOrEqual</operation>
        <value>12/1/2025</value>
    </filters>
    <label>All - Stephan</label>
</ListView>